# bank

./: .clang-format  CMakeLists.txt  revision_data.h.in.cmake
cmake/: genrev.cmake  options.cmake
cmake/macros/: AutoCollect.cmake  FindSodium.cmake  GroupSources.cmake
dep/: CMakeLists.txt
dep/sodium/: CMakeLists.txt
dep/sodium/libsodium/include/sodium/: version.h
dep/sqlite3/: CMakeLists.txt
sql/base/: base.sql
sql/updates/: 11_02_2025_add_created_at_to_account_transaction.sql  29_01_2025_create_users.sql
src/: CMakeLists.txt
src/bank/: CMakeLists.txt  main.cpp
src/bank/entities/: account.h
src/bank/repositories/: account_manager.cpp  account_manager.h  account_repository.cpp  account_repository.h
src/common/: CMakeLists.txt  define.h  git_revision.cpp  git_revision.h
src/common/crypto/: password_hasher.cpp  password_hasher.h
src/common/logging/: logger.cpp  logger.h
src/database/: CMakeLists.txt  database_env.h  db_connection.cpp  db_connection.h  field.cpp  field.h  prepared_statement.cpp  prepared_statement.h  query_result.cpp  query_result.h  sqlite3_prepared_statement.cpp  sqlite3_prepared_statement.h
src/database/updater/: db_updater.cpp  db_updater.h  update_fetcher.cpp  update_fetcher.h
src/genrev/: CMakeLists.txt
test/: CMakeLists.txt  main.cpp
